compiler/testData/diagnostics/quick/backingField/ReadForwardInPropertyInitializer.jet
class ReadForward() {
    val a = <!UNINITIALIZED_VARIABLE!>$b<!>
    val b = 1
}
